# pydantic-todo-bot

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: app.py  db.py  models.py
app/templates/: index.html  result.html
